Update Powerlevel10k configuration for improved prompt styling and functionality
- Regenerated configuration with updated wizard options and checksum.
- Adjusted left prompt elements to include 'context' and removed 'command_execution_time' and 'status'.
- Enabled additional right prompt elements including 'status', 'command_execution_time', and various environment indicators.
- Updated segment visibility and added new segments for 'chezmoi_shell', 'lf', and 'yazi'.
- Enhanced Kubernetes context detection with additional commands.
- Modified AWS and Azure command visibility settings for better integration.
- Updated battery stage icons for improved visual representation.
- General cleanup and adjustments to ensure compatibility with recent Powerlevel10k features.

--- a/common/system/config.yml
+++ b/common/system/config.yml
@@ -23,7 +23,7 @@ audio:
     alias: Speakers
     type: speakers
   alsa_output.pci-0000_00_1f.3.analog-stereo:
-    alias: "Internal speakers"
+    alias: Internal speakers
     type: speakers
   # blacklist to not using devices on audio rotation with comma separated
   blacklist: alsa_output.usb-Corsa_ir_Components_Inc._Corsair_ST100_Headset_Outpu_t_v0.6-00.analog-stereo
