--- a/common/polybar/modules.ini
+++ b/common/polybar/modules.ini
@@ -15,12 +15,12 @@ enable-click = true
 enable-scroll = true
 icon-1 = 1;
 icon-2 = 2;
-icon-3 = 3;
-icon-4 = 4;
-icon-5 = 5;
-icon-6 = 6;﬐
-icon-7 = 7;聆
-icon-8 = 8;
+icon-3 = 3;
+icon-4 = 4;
+icon-5 = 5;∙
+icon-6 = 6;∙
+icon-7 = 7;∙
+icon-8 = 8;∙
 icon-9 = 9;∙
 icon-0 = 0;∙
 icon-default = ∙
