Update notification icon and adjust date format in modules.ini

--- a/common/polybar/modules.ini
+++ b/common/polybar/modules.ini
@@ -135,7 +135,7 @@ click-left = ~/.zui/common/system/modules/bluetooth/interface.sh
 [module/notifications]
 type = custom/text
 format = <label>
-label = ""
+label = ""
 click-left = ~/.zui/common/system/modules/notifications/interface.sh
 
 [module/indicator-cl]
@@ -246,9 +246,9 @@ bar-empty-font = 2
 [module/date]
 type = internal/date
 interval = 1.0
-date = %b %e
+date = %e %b
 time = %k:%M
-label = %date% |%time%
+label = %time% | %date%
 format = <label>
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
