Refactor Rofi themes: Update styles and configurations across multiple themes
- Updated font sizes and styles in powermenu.rasi for galaxy and haxor themes.
- Changed background and foreground colors to enhance visual aesthetics in galaxy theme.
- Adjusted window dimensions and padding for better layout in haxor and nord themes.
- Removed obsolete launcher themes from geometric and haxor themes.
- Enhanced element configurations to include icons and improve spacing in various themes.
- Standardized display formats for applications, networks, and run commands across themes.

--- a/themes/galaxy/polybar/colors.ini
+++ b/themes/galaxy/polybar/colors.ini
@@ -11,42 +11,42 @@
 [color]
 
 bg = #00000000
-fg = #F8F8F2
+fg = #E0C3FC
 
-;; Galaxy
+;; Galaxy - Cosmic Nebula Theme
 
-galaxy_0 = #472B7A
-galaxy_1 = #6E46A4
-galaxy_2 = #9B6BDF
-galaxy_3 = #E4F34A
-galaxy_4 = #42E66C
-galaxy_5 = #EFA554
-galaxy_6 = #E64747
-galaxy_7 = #F8F8F2
-galaxy_8 = #75D7EC
+galaxy_0 = #1A0B2E
+galaxy_1 = #4C1D95
+galaxy_2 = #7C3AED
+galaxy_3 = #A855F7
+galaxy_4 = #C084FC
+galaxy_5 = #E879F9
+galaxy_6 = #F472B6
+galaxy_7 = #E0C3FC
+galaxy_8 = #38BDF8
 
 ; Specific modules
 workspace-active-foreground = #F8F8F2
-workspace-active-background = #6E46A4
-workspace-occupied-underline = #6E46A4
+workspace-active-background = #7C3AED
+workspace-occupied-underline = #A855F7
 workspace-urgent-foreground = #F8F8F2
-workspace-urgent = #E4F34A
+workspace-urgent = #FBBF24
 spotify-bg = #00000000
-spotify-underline = #42E66C
-spotify-overline = #42E66C
-cpu-bar-load-normal = #42E66C
-cpu-bar-load-high = #EFA554
-cpu-bar-load-max = #E64747
-cpu-bar-load-empty = #4c566a
-memory-bar-used-normal = #42E66C
-memory-bar-used-high = #EFA554
-memory-bar-used-max = #E64747
-memory-bar-used-empty = #4c566a
-indicator-off = #4c566a
-volume-bar-normal = #75D7EC
-volume-bar-muted = #4c566a
-backlight-bar-normal = #EFA554
-battery-warning = #E64747
+spotify-underline = #E879F9
+spotify-overline = #C084FC
+cpu-bar-load-normal = #38BDF8
+cpu-bar-load-high = #FBBF24
+cpu-bar-load-max = #F472B6
+cpu-bar-load-empty = #4C1D95
+memory-bar-used-normal = #38BDF8
+memory-bar-used-high = #FBBF24
+memory-bar-used-max = #F472B6
+memory-bar-used-empty = #4C1D95
+indicator-off = #4C1D95
+volume-bar-normal = #C084FC
+volume-bar-muted = #4C1D95
+backlight-bar-normal = #FBBF24
+battery-warning = #F472B6
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
