--- a/themes/geometric/gtk-3.0/settings.ini
+++ b/themes/geometric/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Dracula
+gtk-theme-name=Adapta-Nokto
 gtk-icon-theme-name=Dracula
 gtk-cursor-theme-name=Nord-cursors
 gtk-font-name=Iosevka Nerd Font 10
