--- a/themes/geometric/polybar/top_bars.ini
+++ b/themes/geometric/polybar/top_bars.ini
@@ -32,12 +32,18 @@ offset-x = 0.5%
 modules-center = workspaces
 font = 3
 
-[bar/spotify]
+[bar/date]
 inherit = bar/main
-enable-ipc = true
-width = 21.5%
-offset-x = 39.25%
-modules-center = spotify sep sep spotify-prev sep spotify-play-pause sep spotify-next
+width = 6.5%
+offset-x = 46.75%
+modules-center = date
+
+; [bar/spotify]
+; inherit = bar/main
+; enable-ipc = true
+; width = 21.5%
+; offset-x = 39.25%
+; modules-center = spotify sep sep spotify-prev sep spotify-play-pause sep spotify-next
 
 [bar/cpu]
 inherit = bar/main
