style: update polybar configuration for improved layout and color scheme

--- a/themes/galaxy/polybar/colors.ini
+++ b/themes/galaxy/polybar/colors.ini
@@ -11,7 +11,7 @@
 [color]
 
 bg = #00000000
-fg = #E0C3FC
+fg = #F8F8F2
 
 ;; Galaxy - Cosmic Nebula Theme
 
@@ -28,11 +28,11 @@ galaxy_8 = #38BDF8
 ; Specific modules
 workspace-active-foreground = #F8F8F2
 workspace-active-background = #7C3AED
-workspace-occupied-underline = #A855F7
+workspace-occupied-underline = #7C3AED
 workspace-urgent-foreground = #F8F8F2
 workspace-urgent = #FBBF24
 spotify-bg = #00000000
-spotify-underline = #E879F9
+spotify-underline = #7C3AED
 spotify-overline = #C084FC
 cpu-bar-load-normal = #38BDF8
 cpu-bar-load-high = #FBBF24
