--- a/themes/galaxy/polybar/top_bars.ini
+++ b/themes/galaxy/polybar/top_bars.ini
@@ -27,41 +27,41 @@ font = 3
 
 [bar/workspaces-single-monitor]
 inherit = bar/main
-width = 24%
-offset-x = 0.5%
+width = 21.7%
+offset-x = 1.5%
 modules-center = workspaces
 font = 3
 
-[bar/spotify]
+[bar/date]
 inherit = bar/main
-enable-ipc = true
-width = 21.5%
-offset-x = 39.25%
-modules-center = spotify sep sep spotify-prev sep spotify-play-pause sep spotify-next
+width = 6.5%
+offset-x = 46.75%
+modules-center = date
+
+; [bar/spotify]
+; inherit = bar/main
+; enable-ipc = true
+; width = 21.5%
+; offset-x = 39.25%
+; modules-center = spotify sep sep spotify-prev sep spotify-play-pause sep spotify-next
 
 [bar/cpu]
 inherit = bar/main
 width = 7%
-offset-x = 76.5%
+offset-x = 74.5%
 modules-center = cpu
 
 [bar/memory]
 inherit = bar/main
 width = 7%
-offset-x = 83.5%
+offset-x = 82%
 modules-center = memory
 
 [bar/disk]
 inherit = bar/main
 width = 9%
-offset-x = 90.5%
+offset-x = 89.5%
 modules-center = disk
-
-[bar/hw]
-inherit = bar/main
-widht = 23%
-offset-x = 77%
-
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
 ;;	   / ____/ __ \/ ____/
