--- a/themes/nord/polybar/bottom_bars.ini
+++ b/themes/nord/polybar/bottom_bars.ini
@@ -19,40 +19,47 @@ include-file = ~/.config/polybar/main_bar.ini
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ;; General bars
+[bar/spotify]
+inherit = bar/main
+bottom = true
+enable-ipc = true
+width = 21%
+offset-x = 1.5%
+modules-center = spotify sep sep spotify-prev sep spotify-play-pause sep spotify-next
 
 [bar/notifications]
 inherit = bar/main
 bottom = true
 width = 1.5%
-offset-x = 81.2%
+offset-x = 84.5%
 modules-center = notifications
 
 [bar/notifications-backlight]
 inherit = bar/main
 bottom = true
 width = 1.5%
-offset-x = 75.2%
+offset-x = 78.5%
 modules-center = notifications
 
 [bar/notifications-battery]
 inherit = bar/main
 bottom = true
 width = 1.5%
-offset-x = 77.2%
+offset-x = 80.5%
 modules-center = notifications
 
 [bar/notifications-battery-backlight]
 inherit = bar/main
 bottom = true
 width = 1.5%
-offset-x = 71.2%
+offset-x = 74%
 modules-center = notifications
 
 [bar/indicators]
 inherit = bar/main
 bottom = true
 width = 3%
-offset-x = 82.5%
+offset-x = 86.5%
 modules-center = indicator-cl sep indicator-nl
 font = 4
 
@@ -60,7 +67,7 @@ font = 4
 inherit = bar/main
 bottom = true
 width = 3%
-offset-x = 76.5%
+offset-x = 80.5%
 modules-center = indicator-cl sep indicator-nl
 font = 4
 
@@ -68,7 +75,7 @@ font = 4
 inherit = bar/main
 bottom = true
 width = 3%
-offset-x = 78.5%
+offset-x = 82.5%
 modules-center = indicator-cl sep indicator-nl
 font = 4
 
@@ -76,7 +83,7 @@ font = 4
 inherit = bar/main
 bottom = true
 width = 3%
-offset-x = 72.5%
+offset-x = 76%
 modules-center = indicator-cl sep indicator-nl
 font = 4
 
@@ -85,7 +92,7 @@ inherit = bar/main
 enable-ipc = true
 bottom = true
 width = 1.5%
-offset-x = 85.5%
+offset-x = 90%
 modules-center = network
 
 [bar/network-backlight]
@@ -93,7 +100,7 @@ inherit = bar/main
 enable-ipc = true
 bottom = true
 width = 1.5%
-offset-x = 79.5%
+offset-x = 84%
 modules-center = network
 
 [bar/network-battery]
@@ -101,7 +108,7 @@ inherit = bar/main
 enable-ipc = true
 bottom = true
 width = 1.5%
-offset-x = 81.5%
+offset-x = 86%
 modules-center = network
 
 [bar/network-battery-backlight]
@@ -109,21 +116,21 @@ inherit = bar/main
 enable-ipc = true
 bottom = true
 width = 1.5%
-offset-x = 75.5%
+offset-x = 79.5%
 modules-center = network
 
 [bar/battery-backlight]
 inherit = bar/main
 bottom = true
 width = 4%
-offset-x = 77%
+offset-x = 81.5%
 modules-center = battery
 
 [bar/battery]
 inherit = bar/main
 bottom = true
 width = 4%
-offset-x = 83%
+offset-x = 88%
 modules-center = battery
 
 [bar/audio]
@@ -131,7 +138,7 @@ inherit = bar/main
 enable-ipc = true
 bottom = true
 width = 6%
-offset-x = 87%
+offset-x = 92.5%
 modules-center = audio-icon sep audio
 
 [bar/audio-backlight]
@@ -139,27 +146,15 @@ inherit = bar/main
 enable-ipc = true
 bottom = true
 width = 6%
-offset-x = 81%
+offset-x = 86%
 modules-center = audio-icon sep audio
 
 [bar/backlight]
 inherit = bar/main
 bottom = true
 width = 6%
-offset-x = 87%
+offset-x = 92.5%
 modules-center = backlight
-
-[bar/date]
-inherit = bar/main
-bottom = true
-width = 6.5%
-offset-x = 93%
-modules-center = date
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-;; Working ad-hoc bars
-
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
 ;;	   / ____/ __ \/ ____/
